# FAM-os

./: .gitignore  AGENTS.md  LICENSE  MASTER_PLAN.md  README.md  pyproject.toml
docs/: PROJECT_STRUCTURE.md
handoffs/: 0001-project-foundation.md  0002-prototype-map-and-contract-foundation.md  0003-application-weaving-boundary.md  0004-linux-hardware-discovery.md  0005-ollama-inference-adapter.md  0006-systemd-cgroup-supervisor-adapters.md  0007-python-verifier-sandbox.md  0008-verified-code-orchestration.md  0009-phase1-measured-parity.md  0010-parent-prototype-read-only.md  0011-full-hardware-and-mcp-plan.md  0012-application-fabric-contracts.md  0013-core-execution-plan-contracts.md  0014-hardware-resource-contracts.md  0015-component-manifest-contracts.md  0016-structured-failures-degradation.md  0017-strict-schema-compatibility.md  0018-configuration-layering.md  0019-dual-validation-profiles.md  0020-profile-driven-benchmark-composition.md  0021-full-workstation-smoke-baseline.md  0022-supervisor-boundary.md  0023-owned-service-lifecycle.md  0024-applied-resource-limits.md  0025-capability-access-grants.md  0026-strong-model-quality-rerun.md  0027-immutable-supervisor-audit.md  0028-safe-service-recovery.md  0029-supervisor-threat-model.md  0030-core-request-admission.md  0031-core-routing-lifecycle.md  0032-core-plan-state-machine.md  0033-core-authorized-application-steps.md  0034-core-confirmation-transitions.md  0035-core-attempt-transitions.md  0036-core-control-transitions.md  0037-core-final-result-policy.md  0038-core-lifecycle-matrix.md  0039-application-capability-registry.md  0040-authenticated-local-application-transport.md  (+88 more)
schemas/: README.md
tests/: __init__.py
tools/: __init__.py  build_escalation_trace.py  build_expert_evolution_report.py  build_expert_frequency_profile.py  build_memory_relevance_evidence.py  build_operating_policy_evidence.py  (+53 more)
(+1186 files in other folders)
